--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=3306
+DB_HOST=viaduct.proxy.rlwy.net
+DB_PORT=24481
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=pGSJDLfLxFYrnvEPsFiCCfaXVWMyuILp
 DB_NAME=toolsid
